# c1-coursework

./: .gitignore  .readthedocs.yaml  LICENSE  Note.md  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  api.py  pyproject.toml
backend/data/models/: model_20251204_220809.pt  model_20251204_220809_metadata.json
backend/data/uploads/: dataset_20251204_220442.npz
backend/docs/: conf.py  index.rst
backend/docs/api_reference/: data.rst  model.rst  trainer.rst
backend/docs/get_started/: example.rst  installation.rst  quickstart.rst
backend/docs/modules/: data.rst  model.rst  trainer.rst
backend/docs/performance/: profiling.rst
backend/docs/test_suite/: running_tests.rst  test_structure.rst
backend/docs/user_guide/: api_endpoints.rst  fivedreg_guide.rst  frontend.rst
backend/fivedreg/: __init__.py  main.py
backend/fivedreg/data/: __init__.py  load_data.py
backend/fivedreg/model/: __init__.py  naive_nn.py
backend/fivedreg/trainer/: __init__.py  nn_trainer.py
backend/test/: __init__.py  conftest.py  test_api.py  test_data.py  test_model.py  test_trainer.py
experimens/: test01.ipynb
experiments/: test01.ipynb  test_backend.ipynb
frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json
profiling/: data_generate.py  plot_profiling_results.py  profiling_start.sh  run_profiling.py
scripts/: build_docs.sh  docker_start.sh  docker_stop.sh  local_run_everything.sh  local_start.sh  local_stop.sh  run_profiling.sh  run_test.sh  simple_setup.sh
(+16 files in other folders)
